# PCCL

./: .gitmodules  CLAUDE.md  CRITICAL_HARDWARE_INTEGRATION_COMPLETE.md  LICENSE  PYTHON_CPP_BRIDGE_COMPLETE.md  README.md  README_CHUNK_CONTROL.md  README_DSL.md  README_PLUGINS.md  README_ROCM.md  SIMULATION_CODE_REMOVAL_COMPLETE.md  accomplishment_summary.py  allreduce_primitive.json  pyproject.toml  roadmap.md  setup.py
benchmark/: performance_benchmark.cc
csrc/: engine.cc  engine_c.cc  ir_executor.cc  python_api.cc
csrc/algorithms/: algorithm_manager.cc  allreduce.cc  communication_wrapper.cc
csrc/base/: device.cc  ir.cc  operator.cc  registry.cc
csrc/cluster/: manager.cc  process_group.cc
csrc/common/: environ.cc  logging.cc  serialize.cc  socket_utils.cc
csrc/communication/: network_communicator.cc
csrc/engine/: endpoint.cc  graph_builder.cc  memory_layout.cc  workspace.cc
csrc/ir/: json_parser.cc
csrc/network/: complete_rdma.cc  optimized_tcp.cc  rdma_network.cc  tcp_network.cc
csrc/plugins/: base.cc  device.cc  registry.cc
csrc/plugins/rocm_executor/: CMakeLists.txt  device.cc  executor.cc  python_bindings.cc
csrc/plugins/rocm_executor/utils/: rocm_utils.cc
csrc/runtime/: hardware_executors.cc  json_scheduler.cc
csrc/topology/: topology.cc
csrc/utils/: error_handling.cc
docs/: ALGORITHM_IR_V1.md  MSCCL_COMPATIBILITY.md  OCS_EXECUTION_PLAN_SCHEMA_V1.md  roadmap.md  three_layer_ir_guide.md
example/: advanced_chunk_patterns.py  chunk_level_communication.py  collective_lowering_demo.py  distributed_training.py  hardware_execution_demo.py  network_communication_test.cc  plugins_demo.py  process_group_test.cc  python_dsl_demo.py  rocm_allreduce_example.py  three_layer_ir_demo.py
example/collective/: allreduce_example.py
examples/: ocs_execution_plan_v1.json
include/: common.h  engine.h  engine_c.h  ir_executor.h
include/algorithms/: algorithm_manager.h  allreduce.h  communication_wrapper.h
include/base/: ir.h  operator.h
include/cluster/: manager.h  process_group.h
include/common/: config.h  environ.h  logging.h  nvtx.h  serialize.h  socket_utils.h
include/communication/: communicator.h
include/engine/: endpoint.h  engine.h  fused_step.h  graph_builder.h  host_proxy.h  memory_layout.h  primitive.h  ring_buffer.h  workspace.h
include/ir/: json_parser.h
include/network/: network.h
include/plugins/: base.h  device.h  registry.h
include/runtime/: json_scheduler.h
pccl/: __init__.py  engine.py
pccl/dsl/: __init__.py  (+7 more)
python_bindings/: network_bindings.cc
results/: msccl_three_path_ab_fused.json  msccl_three_path_ab_unfused.json
schemas/: ocs_execution_plan_v1.schema.json
test/: integration_test.cc  test_cpp_ir_executor.py  test_end_to_end.py
tests/: bench_algo_comparison.py  bench_algorithm_ir_ab.py  bench_allreduce_tma_bw.py  bench_ocs_barrier_latency.py  bench_ocs_torch_overhead.py  check_offset.cc  ocs_algorithm_ir_smoke.py  ocs_collective_plan_smoke.py  ocs_phase_runner_smoke.py  ocs_torch_collective_plan_smoke.py  parse_nsys.py  prof_nvtx.py  run_algo_comparison.sh  run_algorithm_ir_ab.sh  run_ocs_algorithm_ir_gpu_smoke.sh  test_algorithm_ir.py  test_algorithms.py  test_basic.py  test_correctness.py  test_msccl_xml.py  test_multichannel.py  test_ocs.py  test_ocs_collective_plan.py  test_ocs_execution_plan.py  test_ocs_execution_plan_schema.py  test_ocs_ir.py  test_ocs_phase_runner.py  test_ocs_protocol.py  test_ocs_torch_plan.py  test_superopt.py
(+113 files in other folders)
